--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,62 @@
 *.so
 *.o
 .Rproj.user/shared/notebooks/patch-chunk-names
+.Rproj.user/A8F3D4C9/build_options
+.Rproj.user/A8F3D4C9/compilation-database/config.json
+.Rproj.user/A8F3D4C9/cpp-definition-cache
+.Rproj.user/A8F3D4C9/pcs/debug-breakpoints.pper
+.Rproj.user/A8F3D4C9/pcs/files-pane.pper
+.Rproj.user/A8F3D4C9/pcs/source-pane.pper
+.Rproj.user/A8F3D4C9/pcs/windowlayoutstate.pper
+.Rproj.user/A8F3D4C9/pcs/workbench-pane.pper
+.Rproj.user/A8F3D4C9/persistent-state
+.Rproj.user/A8F3D4C9/rmd-outputs
+.Rproj.user/A8F3D4C9/saved_source_markers
+.Rproj.user/A8F3D4C9/sources/prop/0C4CE4C4
+.Rproj.user/A8F3D4C9/sources/prop/1144D741
+.Rproj.user/A8F3D4C9/sources/prop/18E36010
+.Rproj.user/A8F3D4C9/sources/prop/2CD79AE4
+.Rproj.user/A8F3D4C9/sources/prop/57A4ADB7
+.Rproj.user/A8F3D4C9/sources/prop/5F8C4CFD
+.Rproj.user/A8F3D4C9/sources/prop/69039E05
+.Rproj.user/A8F3D4C9/sources/prop/8F0EABB2
+.Rproj.user/A8F3D4C9/sources/prop/9DAE44BB
+.Rproj.user/A8F3D4C9/sources/prop/F26BA0A7
+.Rproj.user/A8F3D4C9/sources/prop/INDEX
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/04387CD6-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/0F79EC15
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/0F79EC15-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/113AC141
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/113AC141-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/1BC1C040-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/1CD61A27-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/44B55FBE
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/44B55FBE-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/569F0829
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/569F0829-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/62718D26
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/62718D26-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/85E65D79-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/8CF78988
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/8CF78988-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/9BD0B1E6
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/9BD0B1E6-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/BB07AAB5-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/D8A6195B-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/E158E232-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/E287FE5F-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/F3913647-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/F4873042
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/F4873042-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/F9D45C97-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/FD28251B
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/FD28251B-contents
+.Rproj.user/A8F3D4C9/sources/session-d13125a3/lock_file
+.Rproj.user/shared/notebooks/paths
+.vscode/.env
+.vscode/c_cpp_properties.json
+.vscode/genenv.R
+.vscode/launch.json
+.vscode/settings.json
+.vscode/tasks.json
+test.R
