--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(dd_sim_R)
 export(pbd_sim_new)
 export(pbd_sim_optim)
 export(pbd_sim_orig)
+export(pbd_sim_rcpp)
 export(sim_bisse)
 export(sim_ddd)
 export(sim_pbd)
+export(sim_pbd_cpp)
 import(Rcpp)
 useDynLib(physim, .registration = TRUE)
