add conditional simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(create_ref_table_tbb_par)
 export(dd_sim_R)
 export(draw_from_prior_rcpp)
 export(generate_trees_tbb)
+export(pbd_sim_conditional_rcpp)
 export(pbd_sim_orig)
 export(pbd_sim_rcpp)
+export(perform_abc_rcpp)
 export(prior_dens_rcpp)
 export(sim_bisse)
 export(sim_ddd)
